[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/actors/player_0.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/text_font.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 69.9995
height = 140.001

[sub_resource type="CapsuleShape2D" id=6]
radius = 63.6359
height = 127.274

[sub_resource type="DynamicFont" id=4]
size = 76
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
collision_mask = 22
script = ExtResource( 2 )

[node name="PlayerModel" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.27374e-13 )
shape = SubResource( 5 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 0, -270 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.28882e-05, 0 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = -200.0
margin_top = -479.0
margin_right = 206.0
margin_bottom = -281.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
